--- a/assistants.yml
+++ b/assistants.yml
@@ -1,20 +1,11 @@
 ---
 assistants:
-- name: GPT-5
-  slug: gpt-5
-  language_model_api_name: gpt-5
 - name: GPT-4o
   slug: gpt-4o
   language_model_api_name: gpt-4o
-- name: Claude 3.5 Sonnet
+- name: Claude 4.5 Sonnet
   slug: claude-sonnet
-  language_model_api_name: claude-3-5-sonnet-20241022
+  language_model_api_name: claude-sonnet-4-5-20250929
 - name: Meta Llama
   slug: llama-3-70b
-  language_model_api_name: llama-3.3-70b-versatile
-- name: DeepSeek R1
-  slug: deepseek-r1
-  language_model_api_name: deepseek-r1-distill-llama-70B
-- name: Gemini Pro 1.5
-  slug: gemini-1-5-pro
-  language_model_api_name: gemini-1.5-pro-002
+  language_model_api_name: llama3.1
